[package]
name = "udp_tester"
version = "0.2.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"
description = "UDP server that handles statsd metrics"

[dependencies]
tokio = {version = "*", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "signal"]}
tokio-util = {version = "*", features = ["codec", "net"]}
tokio-stream = "*"
# statsd-parser = "0.3.0"
statsd-parser = {git="https://github.com/appsignal/statsd_parser", branch="main"}
structopt = { version = "0.3", default-features = false }
