[package]
name = "datadog_dev_server"
version = "0.3.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"
description = "UDP server that handles statsd/dogstatsd metrics"

[dependencies]
tokio = {version = "1.1", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "signal"]}
tokio-util = {version = "0.6", features = ["codec", "net"]}
tokio-stream = "0.1"
statsd-parser = {git="https://github.com/appsignal/statsd_parser", rev="4ab5574fc409b4727c5c019aef0d75253005477d"}
structopt = { version = "0.3", default-features = false }
influxdb = { version = "0.6", features = ["derive"], optional = true }
cfg-if = "1.0.0"
anyhow = "1.0.71"

[features]
influx_db = ["influxdb"]
